--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,20 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_native_splash: ^2.4.1
   flutter_svg: ^2.0.10+1
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  flutter_bloc: ^8.1.6
+  freezed: ^2.5.7
+  freezed_annotation: ^2.4.4
+  json_annotation: ^4.9.0
+  retrofit: ^4.2.0
+  dio: ^5.6.0
+  pretty_dio_logger: ^1.4.0
+  retrofit_generator: ^8.2.0
+  get_it: ^7.7.0
+  shared_preferences: ^2.3.2
+  flutter_secure_storage: ^9.2.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -49,6 +63,8 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^4.0.0
+  build_runner: ^2.4.12
+  json_serializable: ^6.8.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
