--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,8 @@ dependencies:
   flutter_secure_storage: ^9.2.2
   shimmer: ^3.0.0
   smooth_page_indicator: ^1.2.0+3
+  skeletonizer: ^1.4.2
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
