finfish profile feature logic and ui

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   smooth_page_indicator: ^1.2.0+3
   skeletonizer: ^1.4.2
   cached_network_image: ^3.4.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
