--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,7 +36,6 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   flutter_screenutil: ^5.9.3
-  flutter_native_splash: ^2.4.1
   flutter_svg: ^2.0.10+1
   firebase_core: ^2.24.2
   firebase_auth: ^4.16.0
@@ -57,6 +56,8 @@ dependencies:
   cached_network_image: ^3.4.1
   image_picker: ^1.1.2
   flutter_launcher_icons: ^0.13.1
+  flutter_stripe: ^11.1.0
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
